Fix the layout shift on table loaders

--- a/projects/sparkle-ui/styles/components/sparkle-table.component.scss
+++ b/projects/sparkle-ui/styles/components/sparkle-table.component.scss
@@ -15,9 +15,16 @@ $sparkleTable: true !default;
     width: 100%;
     display: grid;
     grid-template-columns: var(--table-columns);
+    position: relative;
 
+    thead {
+      position: relative;
+    }
     spk-progress-bar {
       grid-column: 1 / -1;
+      position: absolute;
+      top: 100%;
+      transform: translateY(-50%);
     }
 
     tbody,
